syntax="proto3";
package evarmor;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest{
  string name = 1;
}

message HelloReply{
  string message = 1;
}


enum ServiceType {
  ServiceTypeUnknown = 0;
  ServiceTypeGateway = 1;
}

enum ServiceLevel {
  ServiceLevelUnknown = 0;
  ServiceLevelClient = 1;
}

